--- a/over/app/src/main/AndroidManifest.xml
+++ b/over/app/src/main/AndroidManifest.xml
@@ -41,6 +41,13 @@
 
         </activity>
 
+        <activity android:name=".option_imei"
+            android:label="IMEI"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+
+
+
         <activity android:name=".imei_check"
             android:label="IMEI"
             android:theme="@style/AppTheme.NoActionBar">
