--- a/over/app/src/main/AndroidManifest.xml
+++ b/over/app/src/main/AndroidManifest.xml
@@ -56,6 +56,11 @@
 
 
 
+        <activity android:name=".Display_form"
+            android:label="IMEI"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+
 
         <activity
             android:name=".fetch_category"
