--- a/over/app/src/main/AndroidManifest.xml
+++ b/over/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:label="@string/app_name"
         android:name=".App"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        >
 <!--we can activate the login later-->
 
 
@@ -28,6 +29,13 @@
         <!--</activity>-->
 
         <!-- change the intent filter  from launcher to login-->
+
+        <activity
+            android:name=".QC_Report"
+            android:label="Qc"
+            android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
 
         <activity
             android:name=".LauncherActivity"
