Form display and layout completed

--- a/over/app/src/main/AndroidManifest.xml
+++ b/over/app/src/main/AndroidManifest.xml
@@ -15,18 +15,18 @@
 <!--we can activate the login later-->
 
 
-        <!--<activity-->
-            <!--android:name=".login"-->
-            <!--android:theme="@style/AppTheme.NoActionBar">-->
-            <!--android:screenOrientation="portrait">-->
+        <activity
+            android:name=".login"
+            android:theme="@style/AppTheme.NoActionBar">
+            android:screenOrientation="portrait">
 
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
 
-        <!--</activity>-->
+        </activity>
 
         <!-- change the intent filter  from launcher to login-->
 
@@ -49,11 +49,7 @@
         <activity android:name=".imei_check"
             android:label="IMEI"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
             </activity>
 
 
